--- a/arch/arm64/configs/lavender_defconfig
+++ b/arch/arm64/configs/lavender_defconfig
@@ -383,6 +383,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_DIAGNOSTICS=y
 CONFIG_TOUCHSCREEN_NVT_F7A=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_F7A=y
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QTI_HAPTICS=y
